# call-center-intelligence

./: .env.example  .env.local.example  .gitignore  .gitlab-ci.yml  .replit  CLAUDE.md  DOCKER_SETUP.md  Makefile  README.md  check_db.js  check_feed_pagination.py  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  replit.md  test_cases_api.py  test_frontend_feed_display.js  tsconfig.json  tsconfig.tsbuildinfo  verify_docker_env.sh
.claude-user/: .claude.json  (+3 more)
call_center_intelligence_backend/: .gitattributes  Dockerfile  Makefile  README.md  check_incidents.py  create_alerts_for_existing_incidents.py  debug_metadata_issue.py  docker-compose.yml  init_db_schema.py  main.py  nginx.conf  nginx.conf.template  pyproject.toml  reproduce_validation_error.py  requirements.txt  seed_postgres.py  setup-env.sh  start-dev.sh  start_dev.py  start_server.sh  test_comprehensive_validation_fix.py  test_feed_integration.py  test_frontend_compatibility.py  test_integration_fix.py  test_metadata_validation_fix.py  test_new_fields.py  test_null_metadata_handling.py  validation_error_analysis.md
call_center_intelligence_backend/alembic/: env.py
call_center_intelligence_backend/alembic/versions/: 81c3efb97e72_add_incidents_table.py  9eb07df1dff8_initial_migration.py  b09e21d1b44f_add_priority_and_summary_to_incidents.py  (+2 more)
call_center_intelligence_backend/scripts/: test_incident_upload.py  upload_thai_csv.py
call_center_intelligence_backend/tests/: conftest.py  test_auth.py  test_auth_middleware.py  test_database.py  test_feed_endpoints.py  test_incident_feed_transformer.py  test_property_cors_configuration.py  test_property_database_model_equivalence.py  test_property_database_relationship_enforcement.py  test_property_http_method_support.py  test_property_input_validation_consistency.py  test_property_simple.py  test_retrieval_service.py  test_search_endpoints.py  validate_relationship_tests.py
(+450 files in other folders)
